--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Tämä sivu on tehty osana kouluprojektia">
+    <meta name="author" content="Teemu, Ada, Laura">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Battery energy drink</title>
 </head>
 <body>
     
