--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <title>Battery energy drink</title>
 </head>
 <body>
+    <header>
+
+    </header>
+    <nav>
+
+    </nav>
+
     
 </body>
 </html>
