kuvien lisäystä ja css

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     </nav>
 <header>
     <h1>BATTERYPLUS</h1>
-    <img src="/Team2_Projekti/images/etusivu3.jpg" alt="logo" title="kuva2">
+    <img src="/images/etusivu3.jpg" alt="logo" title="kuva2">
 </header>
 <nav>
     <ul class="top-menu2">
-        <li><a href="#">juoma1</li>
-        <li><a href="#">juoma2</li>
-        <li><a href="#">juoma3</li>
-        <li><a href="#">juoma4</li>
-        <li><a href="#">juoma5</li>
-        <li><a href="#">juoma6</a></li>
+        <li><a href="#">JUOMA</li>
+        <li><a href="#">JUOMA</li>
+        <li><a href="#">JUOMA</li>
+        <li><a href="#">JUOMA</li>
+        <li><a href="#">JUOMA</li>
+        <li><a href="#">JUOMA</a></li>
         
     </ul>
 
