--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
         </ul>
 
     </nav>
-<header>
+    <header>
     <h1>BATTERYPLUS</h1>
-    <img src="/images/etusivu3.jpg" alt="logo" title="kuva2">
-</header>
+    </header>
 <nav>
+
+    <img src="/Team2_Projekti/images/backround.jpg" alt="logo" title="kuva2">
+    <img src="/Team2_Projekti/images/battery-plus-hydrate.jpg" alt="logo" title="kuva3" id="juoma">
+    <img src="/Team2_Projekti/images/battery-plus-focus.jpg" alt="logo" title="kuva4" id="juoma">
     <ul class="top-menu2">
         <li><a href="#">JUOMA</li>
         <li><a href="#">JUOMA</li>
