--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 <nav>
 
     <img src="/Team2_Projekti/images/backround.jpg" alt="logo" title="kuva2">
-    <img src="/Team2_Projekti/images/battery-plus-hydrate.jpg" alt="logo" title="kuva3" id="juoma">
-    <img src="/Team2_Projekti/images/battery-plus-focus.jpg" alt="logo" title="kuva4" id="juoma">
+    <img src="/Team2_Projekti/images/battery-plus-hydrate.png" alt="logo" title="kuva3" id="juoma">
+    <img src="/Team2_Projekti/images/battery-plus-focus.png" alt="logo" title="kuva4" id="juoma">
+    <img src="/Team2_Projekti/images/battery-plus-immunity.png" alt="logo" title="kuva4" id="juoma">
+    <img src="/Team2_Projekti/images/Batteryt.png" alt="logo" title="kuva4" id="juoma">
     <ul class="top-menu2">
         <li><a href="#">JUOMA</li>
         <li><a href="#">JUOMA</li>
