--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 <section class="Kuvat">
 
-    <img src="/Team2_Projekti/images/slide1.png" alt="logo" title="kuva1">
+    <img src="/images/slide1.png" alt="logo" title="kuva1">
     <img src="/Team2_Projekti/images/slide2.png" alt="logo" title="kuva2">
     <img src="/Team2_Projekti/images/slide3.png" alt="logo" title="kuva3">
     
