--- a/index.html
+++ b/index.html
@@ -25,10 +25,21 @@
     <h1>BATTERY</h1>
     </header>
 <section class="Kuvat">
+    <img src="/Team2_Projekti/images/Batteryt2.png">
 
-    <img src="/images/slide1.png" alt="logo" title="kuva1">
-    <img src="/Team2_Projekti/images/slide2.png" alt="logo" title="kuva2">
-    <img src="/Team2_Projekti/images/slide3.png" alt="logo" title="kuva3">
+    <section class="slider-frame">
+        <section class="slide-images">
+                <section class="img-container">
+                    <img src="/Team2_Projekti/images/slide1.png">
+                </section>
+                <section class="img-container">
+                    <img src="/Team2_Projekti/images/Slide2.png">
+                </section>
+                <section class="img-container">
+                    <img src="/Team2_Projekti/images/slide3.png">
+                </section>
+        </section>
+    </section>
     
 
 </section>
@@ -38,6 +49,12 @@ Battery, developedd in Finland, has brought an extra lift<br>
 to the hang since 1997, and since then it has also been<br>
 the country's most popular every drink.</p>
 </article>
+<section class="juomat">
+
+<p>tekstiäää jeeee</p>
+
+
+</section>
     
 <footer>
 
