--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 
     </nav>
     <header>
-        <img src="/Team2_Projekti/images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
+        <img src="/images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
     <h1>BATTERY</h1>
     </header>
 <section class="Kuvat">
-    <img src="/Team2_Projekti/images/Batteryt2.png">
+    <img src="/images/Batteryt.png">
 
     <section class="slider-frame">
         <section class="slide-images">
                 <section class="img-container">
-                    <img src="/Team2_Projekti/images/slide1.png">
+                    <img src="/images/slide1.png">
                 </section>
                 <section class="img-container">
-                    <img src="/Team2_Projekti/images/Slide2.png">
+                    <img src="/images/Slide2.png">
                 </section>
                 <section class="img-container">
-                    <img src="/Team2_Projekti/images/slide3.png">
+                    <img src="/images/slide3.png">
                 </section>
         </section>
     </section>
