--- a/index.html
+++ b/index.html
@@ -18,23 +18,22 @@
         </ul>
     </nav>
     <header>
-        <img src="/images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
-    <h1>BATTERY</h1>
+        <img src="images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
+        <h1>BATTERY</h1>
     </header>
-<section class="Kuvat">
-    <img src="/images/Batteryt.png">
-
-    <section class="slider-frame">
-        <section class="slide-images">
-                <section class="img-container">
-                    <img src="/images/slide1.png">
-                </section>
-                <section class="img-container">
-                    <img src="/images/Slide2.png">
-                </section>
-                <section class="img-container">
-                    <img src="/images/slide3.png">
-                </section>
+    <section class="Kuvat">
+        <section class="slider-frame">
+            <section class="slide-images">
+                    <section class="img-container">
+                        <img src="images/slide1.png">
+                    </section>
+                    <section class="img-container">
+                        <img src="images/Slide2.png">
+                    </section>
+                    <section class="img-container">
+                        <img src="images/slide3.png">
+                    </section>
+            </section>
         </section>
     </section>
         <article>
