--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <address>
             <p>Osoite xd<br>
             puh num xd<br>
-            lauran osoite xaxaxa</p>
+            lauran osoites xaxaxa</p>
             <p>&copy; Teemu, Laura, Ada</p>
             
         </address>
