--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>OUR PRODUCTS</p>
             <p>Energy Drinks Juiced</p>
         <section class="juomak">
-            <img src="images/battery-plus-focus.png" id="batteryt">
+            <a href="/sivu1.html" target="_blank"><img src="images/battery-plus-focus.png" id="batteryt">
             <img src="images/battery-plus-hydrate.png" id="batteryt">
             <img src="images/battery-plus-immunity.png" id="batteryt">
             <img src="images/Batteryt2.png" id="batteryt">
