--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             <p>Energy Drinks Juiced</p>
         <section class="juomak">
             <a href="/sivu1.html" target="_blank"><img src="images/battery-plus-focus.png" id="batteryt">
-            <a href="/sivu1.html" target="_blank"><img src="/Team2_Projekti/images/lemon-lime.png" id="batteryt1">
+            <a href="/sivu1.html" target="_blank"><img src="images/lemon-lime.png" id="batteryt1">
             <a href="/sivu1.html" target="_blank"><img src="images/battery-plus-hydrate.png" id="batteryt">
-            <a href="/sivu1.html" target="_blank"><img src="/Team2_Projekti/images/peach-raspberry.png" id="batteryt1">
+            <a href="/sivu1.html" target="_blank"><img src="images/peach-raspberry.png" id="batteryt1">
             <a href="/sivu1.html" target="_blank"><img src="images/battery-plus-immunity.png" id="batteryt">
             <a href="/sivu1.html" target="_blank"><img src="images/jungled.png" id="batteryt1">
             <a href="/sivu1.html" target="_blank"><img src="images/Batteryt2.png" id="batteryt">
