--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <section class="juomat">
         
             <h1>BATTERY ENERGY  DRINK</h1><br>
-            <p>OUR PRODUCTS</p>
-            <p>Energy Drinks Juiced</p>
+            <p>PRODUCTS</p>
+           
         <section class="juomak">
-            <a href="/sivu1.html" target="_blank"><img src="images/battery-plus-focus.png" id="batteryt">
+            <a href="sivu1.html" target="_blank"><img src="images/battery-plus-focus.png" id="batteryt">
             <a href="/sivu1.html" target="_blank"><img src="images/lemon-lime.png" id="batteryt1">
             <a href="/sivu1.html" target="_blank"><img src="images/battery-plus-hydrate.png" id="batteryt">
             <a href="/sivu1.html" target="_blank"><img src="images/peach-raspberry.png" id="batteryt1">
