--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="slider-frame">
             <section class="slide-images">
                     <section class="img-container">
-                        <img src="images/slide1.png">
+                        <img src="images/slide1u.png">
                     </section>
                     <section class="img-container">
                         <img src="images/Slide2.png">
