--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                         <img src="images/slide1u.png">
                     </section>
                     <section class="img-container">
-                        <img src="images/Slide2.png">
+                        <img src="images/Slide2u.png">
                     </section>
                     <section class="img-container">
-                        <img src="images/slide3.png">
+                        <img src="images/slide3u.png">
                     </section>
             </section>
         </section>
