--- a/index.html
+++ b/index.html
@@ -21,21 +21,12 @@
         <img src="images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
         <h1>BATTERY</h1>
     </header>
-    <section class="Kuvat">
-        <section class="slider-frame">
-            <section class="slide-images">
-                    <section class="img-container">
-                        <img src="images/slide1u.png">
-                    </section>
-                    <section class="img-container">
-                        <img src="images/Slide2u.png">
-                    </section>
-                    <section class="img-container">
-                        <img src="images/slide3u.png">
-                    </section>
-            </section>
-        </section>
-    </section>
+    <div class="wrapper">
+        <div style="background-image:url(images/slide1u.png)"></div>
+      <div style="background-image:url(images/slide2u.png)"></div>
+      <div style="background-image:url(images/slide3u.png)"></div>
+    
+    </div>
         <article>
             <p>
                 Extra energy. From Finland<br>
