--- a/sivu1.html
+++ b/sivu1.html
@@ -38,6 +38,9 @@
         <img src="images/sizzle.png" class="tölkki1">
         <img src="images/Spiced.png" class="tölkki1">
         <img src="images/Battery_normaali.png" class="tölkki1">
+        <img src="images/Battery_sokeriton.png" class="tölkki1">
+        <img src="images/Battery_apple.png" class="tölkki1">
+        <img src="images/Battery_remix.png" class="tölkki1">
 
         
 
