Juomien omat sivut

--- a/Products/Lemon-lime.html
+++ b/Products/Lemon-lime.html
@@ -24,7 +24,7 @@
 <main>
     <img src="../images/lemon-lime.png" class="tölkki1" id="kuva">
 <section class="teksti">
-    <h1 id="fontti">Battery Sizzle</h1>
+    <h1 id="fontti">Battery Lemon and Lime</h1>
     <p>Water, sugar, acidity regulator E330, maltodextrin, carbon dioxide, taurine (4000 mg/l), flavors, coffee and guarana extract (caffeine 320 mg/l), preservative E211, color E150d, vitamins (riboflavin, niacin, B6, B12, pantothenic acid). High caffeine content (32 mg/100 ml). Not recommended for children or for pregnant or breastfeeding women.</p>
     <p>Sugar-free energy drink with delightful tangy flavors of lemon and lime.</p>
 </section>
