--- a/Products/hydrate.html
+++ b/Products/hydrate.html
@@ -24,7 +24,7 @@
 <main>
     <img src="../images/battery-plus-hydrate.png" class="tölkki1" id="kuva">
 <section class="teksti">
-    <h1 id="fontti">Battery Sizzle</h1>
+    <h1 id="fontti">BatteryPLUS Hydrate</h1>
     <p>Water, invert sugar, acidity regulator (E330), minerals (potassium citrate, sodium chloride, sodium citrate, magnesium carbonate, calcium lactate), carbon dioxide, natural flavor, preservative (E202), natural caffeine (100 mg/l), antioxidant (E300), sweetener (steviol glycosides), stabilizers (E414, E445).</p>
     <p>A low-calorie, low-caffeine citrus-flavored isotonic drink designed to help you hydrate during or after your performance. Developed in collaboration with Billebeino.</p>
 </section>
