--- a/Products/jungled.html
+++ b/Products/jungled.html
@@ -24,7 +24,7 @@
 <main>
     <img src="../images/jungled.png" class="tölkki1" id="kuva">
 <section class="teksti">
-    <h1 id="fontti">Battery Sizzle</h1>
+    <h1 id="fontti">Battery Jungled</h1>
     <p>Water, sugar, maltodextrin, carbon dioxide, taurine (4000 mg/l), acidity regulator E330, caffeine (320 mg/l), color E150d, flavors, preservative E202, vitamins (niacin, B6, B12, pantothenic acid). High caffeine content (32 mg/100 ml). Not recommended for children or for pregnant or breastfeeding women.</p>
     <p>A taste-bud and mind-tingling energy drink with the flavors of exotic fruits.</p>
 </section>
