--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <ul class="top-menu" id="fontti">
-            <li><a href="#">ABOUT US</li>
+            <li><a href="../Team2_Projekti/aboutus.html">ABOUT US</li>
             <li><a href="../Team2_Projekti/Products/Products.html">PRODUCTS</li>
             <li><a href="#">CONTACT</li>
         </ul>
