--- a/Products/immunity.html
+++ b/Products/immunity.html
@@ -24,7 +24,7 @@
 <main>
     <img src="../images/battery-plus-immunity.png" class="tölkki1" id="kuva">
 <section class="teksti">
-    <h1 id="fontti">Battery Sizzle</h1>
+    <h1 id="fontti">BatteryPLUS Immunity</h1>
     <p>Water, acidity regulators (E330, E331), carbon dioxide, natural citrus flavor, sweeteners (E950, E951), coffee extract (caffeine 320 mg/l), vitamins (C, niacin, B6, B12, pantothenic acid), preservative (E202), zinc gluconate, stabilizer (E414).</p>
     <p>A sugar-free energy drink with a refreshing lemon and yuzu flavor, enriched with vitamins and zinc to support the normal functioning of your immune system.</p>
 </section>
