--- a/Products/Products.html
+++ b/Products/Products.html
@@ -14,8 +14,8 @@
 <body>
     <nav>
         <ul class="top-menu" id="fontti">
-            <li><a href="#">ABOUT US</li>
-            <li><a href="#">PRODUCTS</li>
+            <li><a href="../aboutus.html">ABOUT US</li>
+            <li><a href="../Products/Products.html">PRODUCTS</li>
             <li><a href="#">CONTACT</li>
             </a>
             </ul>
