--- a/Products/remix.html
+++ b/Products/remix.html
@@ -12,7 +12,7 @@
 </head>
 <nav>
     <ul class="top-menu" id="fontti">
-        <li><a href="#">ABOUT US</li>
+        <li><a href="../aboutus.html">ABOUT US</li>
         <li><a href="../Products/Products.html">PRODUCTS</li>
         <li><a href="#">CONTACT</li>
     </ul>
