--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,7 @@
 
     <header>
         <img src="images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
-        <h1>BATTERY</h1>
+        <a href="/Team2_Projekti/index.html"><h1>BATTERY</h1></a>
     </header>
  
 
