--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul class="top-menu" id="fontti">
             <li><a href="../Team2_Projekti/aboutus.html">ABOUT US</li>
-            <li><a href="/Products/Products.html">PRODUCTS</li>
+            <li><a href="Products/Products.html">PRODUCTS</li>
             <li><a href="#">CONTACT</li></a>
         </ul>
     </nav>
