--- a/Products/focus.html
+++ b/Products/focus.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="../css/style-products.css">
     <title>BatteryPLUS Focus</title>
 </head>
+<body>
 <nav>
     <ul class="top-menu" id="fontti">
-        <li><a href="../aboutus.html">ABOUT US</li>
-        <li><a href="../Products/Products.html">PRODUCTS</li>
-        <li><a href="#">CONTACT</li>
+        <li><a href="../aboutus.html">ABOUT US</a></li>
+        <li><a href="../Products/Products.html">PRODUCTS</a></li>
+        <li><a href="#">CONTACT</a></li>
     </ul>
 </nav>
 <header>
@@ -40,7 +41,7 @@
     </address>
 
 </footer>
-<body>
+
     
 </body>
 </html>
