--- a/Products/jungled.html
+++ b/Products/jungled.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/style-products.css">
     <title>Battery Jungled</title>
 </head>
+<body><
 <nav>
     <ul class="top-menu" id="fontti">
         <li><a href="../aboutus.html">ABOUT US</li>
@@ -40,7 +41,7 @@
     </address>
 
 </footer>
-<body>
+
     
 </body>
 </html>
