--- a/aboutus.html
+++ b/aboutus.html
@@ -13,15 +13,15 @@
 <body>
     <nav>
         <ul class="top-menu" id="fontti">
-            <li><a href="#">ABOUT US</li>
-            <li><a href="Products/Products.html">PRODUCTS</li>
+            <li><a href="aboutus.html">ABOUT US</li>
+            <li><a href="Products/Products.html">PRODUCTS</li></a>
             <li><a href="#">CONTACT</li></a>
         </ul>
     </nav>
 
     <header>
         <img src="images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
-        <a href="/Team2_Projekti/index.html"><h1>BATTERY</h1></a>
+        <a href="index.html"><h1>BATTERY</h1></a>
     </header>
  
 
