--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <nav>
         <ul class="top-menu" id="fontti">
-            <li><a href="../Team2_Projekti/aboutus.html">ABOUT US</li>
-            <li><a href="Products/Products.html">PRODUCTS</li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="Products/Products.html">PRODUCTS</li></a>
             <li><a href="#">CONTACT</li></a>
         </ul>
     </nav>
     <header>
         <img src="images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
-        <h1>BATTERY!</h1>
+        <h1>BATTERY</h1>
     </header>
     <div class="wrapper">
         <div style="background-image:url(images/slide1u.png)"></div>
