--- a/Products/Battery-energy.html
+++ b/Products/Battery-energy.html
@@ -13,9 +13,9 @@
 <body>
 <nav>
     <ul class="top-menu" id="fontti">
-        <li><a href="../aboutus.html">ABOUT US</li>
-        <li><a href="../Products/Products.html">PRODUCTS</li>
-        <li><a href="#">CONTACT</li>
+        <li><a href="../aboutus.html">ABOUT US</a></li>
+        <li><a href="../Products/Products.html">PRODUCTS</a></li>
+        <li><a href="#">CONTACT</a></li>
     </ul>
 </nav>
 <header>
@@ -23,16 +23,16 @@
     <a href="../index.html"><h1>BATTERY</h1></a>
 </header>
 <main>
-    <img src="../images/Battery_normaali.png" class="tölkki1" id="kuva">
+    <img src="../images/Battery_normaali.png" alt="logo" class="tölkki1" id="kuva">
 <section class="teksti">
-    <h1 id="fontti">Battery Enery Drink</h1>
+    <h2 class="fontti">Battery Enery Drink</h2>
     <p>Water, sugar, acidity regulator E330, maltodextrin, carbon dioxide, taurine (4000 mg/l), flavors, coffee and guarana extract (caffeine 320 mg/l), preservative E211, color E150d, vitamins (riboflavin, niacin, B6, B12, pantothenic acid). High caffeine content (32 mg/100 ml). Not recommended for children or for pregnant or breastfeeding women.</p>
     <p>An energy drink that needs no introduction. A classic energy drink flavor that helps you stay sharp and overcome life's everyday challenges.</p>
 </section>
 </main>
 <footer>
 
-    <address id="fontti">
+    <address>
         <p>Web kehitys<br>
             <p>Staattisen verkkosivun luonti</p>
             <p>Ryhmätyö</p>
