--- a/Products/hydrate.html
+++ b/Products/hydrate.html
@@ -13,9 +13,9 @@
 <body>
 <nav>
     <ul class="top-menu" id="fontti">
-        <li><a href="../aboutus.html">ABOUT US</li>
-        <li><a href="../Products/Products.html">PRODUCTS</li>
-        <li><a href="#">CONTACT</li>
+        <li><a href="../aboutus.html">ABOUT US</a></li>
+        <li><a href="../Products/Products.html">PRODUCTS</a></li>
+        <li><a href="#">CONTACT</a></li>
     </ul>
 </nav>
 <header>
@@ -23,16 +23,16 @@
     <a href="../index.html"><h1>BATTERY</h1></a>
 </header>
 <main>
-    <img src="../images/battery-plus-hydrate.png" class="tölkki1" id="kuva">
+    <img src="../images/battery-plus-hydrate.png"  alt="logo" class="tölkki1" id="kuva">
 <section class="teksti">
-    <h1 id="fontti">BatteryPLUS Hydrate</h1>
+    <h2>BatteryPLUS Hydrate</h2>
     <p>Water, invert sugar, acidity regulator (E330), minerals (potassium citrate, sodium chloride, sodium citrate, magnesium carbonate, calcium lactate), carbon dioxide, natural flavor, preservative (E202), natural caffeine (100 mg/l), antioxidant (E300), sweetener (steviol glycosides), stabilizers (E414, E445).</p>
     <p>A low-calorie, low-caffeine citrus-flavored isotonic drink designed to help you hydrate during or after your performance. Developed in collaboration with Billebeino.</p>
 </section>
 </main>
 <footer>
 
-    <address id="fontti">
+    <address>
         <p>Web kehitys<br>
             <p>Staattisen verkkosivun luonti</p>
             <p>Ryhmätyö</p>
