--- a/Products/sizzle.html
+++ b/Products/sizzle.html
@@ -13,9 +13,9 @@
 <body>
 <nav>
     <ul class="top-menu" id="fontti">
-        <li><a href="../aboutus.html">ABOUT US</li>
-        <li><a href="../Products/Products.html">PRODUCTS</li>
-        <li><a href="#">CONTACT</li>
+        <li><a href="../aboutus.html">ABOUT US</a></li>
+        <li><a href="../Products/Products.html">PRODUCTS</a></li>
+        <li><a href="#">CONTACT</a></li>
     </ul>
 </nav>
 <header>
@@ -23,16 +23,16 @@
     <a href="../index.html"><h1>BATTERY</h1></a>
 </header>
 <main>
-    <img src="../images/sizzle.png" class="tölkki1" id="kuva">
+    <img src="../images/sizzle.png" alt="logo" class="tölkki1" id="kuva">
 <section class="teksti">
-    <h1 id="fontti">Battery Sizzle</h1>
+    <h2>Battery Sizzle</h2>
     <p>Water, carbon dioxide, acidity regulators (E330, E331), natural flavor, black carrot extract, sweeteners (E950, E951), caffeine (320mg/l), preservative (E202), vitamins (niacin, B6, B12, pantothenic acid).</p>
     <p>"Battery No Calorie Sizzle" is a sugar-free energy drink with a delightful combination of refreshing strawberry and a hint of mint. Enjoy it every day!</p>
 </section>
 </main>
 <footer>
 
-    <address id="fontti">
+    <address>
         <p>Web kehitys<br>
             <p>Staattisen verkkosivun luonti</p>
             <p>Ryhmätyö</p>
