--- a/Products/focus.html
+++ b/Products/focus.html
@@ -23,16 +23,16 @@
     <a href="../index.html"><h1>BATTERY</h1></a>
 </header>
 <main>
-    <img src="../images/battery-plus-focus.png" class="tölkki1" id="kuva">
+    <img src="../images/battery-plus-focus.png" alt="logo" class="tölkki1" id="kuva">
 <section class="teksti">
-    <h1 id="fontti">BatteryPLUS Focus</h1>
+    <h2>BatteryPLUS Focus</h2>
     <p>Water, acidity regulators (E330, E331), carbon dioxide, carrot extract, sweeteners (E950, E951), coffee extract (caffeine 320 mg/l), preservative (E202), vitamins (niacin, B6, B12, pantothenic acid, biotin), natural flavor.</p>
     <p>Sugar-free energy drink with captivating flavors of pomegranate and blueberry. Added vitamins and biotin promote normal psychological functions.</p>
 </section>
 </main>
 <footer>
 
-    <address id="fontti">
+    <address>
         <p>Web kehitys<br>
             <p>Staattisen verkkosivun luonti</p>
             <p>Ryhmätyö</p>
