--- a/Products/remix.html
+++ b/Products/remix.html
@@ -13,9 +13,9 @@
 <body>
 <nav>
     <ul class="top-menu" id="fontti">
-        <li><a href="../aboutus.html">ABOUT US</li>
-        <li><a href="../Products/Products.html">PRODUCTS</li>
-        <li><a href="#">CONTACT</li>
+        <li><a href="../aboutus.html">ABOUT US</a></li>
+        <li><a href="../Products/Products.html">PRODUCTS</a></li>
+        <li><a href="#">CONTACT</a></li>
     </ul>
 </nav>
 <header>
@@ -23,16 +23,16 @@
     <a href="../index.html"><h1>BATTERY</h1></a>
 </header>
 <main>
-    <img src="../images/Battery_remix.png" class="tölkki1" id="kuva">
+    <img src="../images/Battery_remix.png" alt="logo" class="tölkki1" id="kuva">
 <section class="teksti">
-    <h1 id="fontti">Battery Remix</h1>
+    <h2>Battery Remix</h2>
     <p>Water, sugar, carbon dioxide, maltodextrin, taurine (4000 mg/l), acidity regulator E330, carrot extract, natural flavors, caffeine (320 mg/l), preservative E202, vitamins (niacin, B6, B12, pantothenic acid). High caffeine content (32 mg/100 ml). Not recommended for children or for pregnant or breastfeeding women.</p>
     <p>The energy drink has a tangy lime flavor and delightful summery strawberries. A charming flavor combination that brings a taste of summer even in the midst of winter.</p>
 </section>
 </main>
 <footer>
 
-    <address id="fontti">
+    <address>
         <p>Web kehitys<br>
             <p>Staattisen verkkosivun luonti</p>
             <p>Ryhmätyö</p>
