--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <h1>BATTERY!</h1>
     </header>
     <div class="wrapper">
-        <div style="background-image:url(images/slide1u.png)"></div>
-      <div style="background-image:url(images/slide2u.png)"></div>
-      <div style="background-image:url(images/slide3u.png)"></div>
+        <div style="background-image:url(/images/lopullinen\ \(1\).png)"></div>
+      <div style="background-image:url(/images/lopullinen\ \(3\).png)"></div>
+      <div style="background-image:url(images/lopullinen\ \(5\).png)"></div>
     
     </div>
         <article>
