--- a/Products/Products.html
+++ b/Products/Products.html
@@ -41,6 +41,12 @@
         <a href="../Products/remix.html"><img src="../images/Battery_remix.png" alt="juoma" class="tölkki1"></a>
         <a href="../Products/breeze.html"><img src="../images/Battery_breeze.png" alt="juoma" class="tölkki1"></a>
     </div>
+
+    <div>
+
+        <img src="../images/lamppu.jpg" width="1900" height="1000">
+    
+    </div>
     <footer>
 
         <address>
