--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/contact.css">
         <script src="https://kit.fontawesome.com/d7a41c0dba.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
         <title>CONTACT</title>
     </head>
 
@@ -18,7 +19,7 @@
         </nav>
         <header>
             <img src="images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
-            <h1>BATTERY</h1>
+            <a href="index.html"><h1>BATTERY</h1></a>
         </header>
         <section class="contact">
             <div class="content">
