--- a/Products/Products.html
+++ b/Products/Products.html
@@ -16,7 +16,7 @@
         <ul class="top-menu" id="fontti">
             <li><a href="../aboutus.html">ABOUT US</a></li>
             <li><a href="../Products/Products.html">PRODUCTS</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="../contact.html">CONTACT</a></li>
             
             </ul>
 
