--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="HTML, CSS, BATTERY, HAMK, KOULU, ENERGYDRINK">
+        <meta name="description" content="Tämä sivu on tehty osana kouluprojektia">
+        <meta name="author" content="Teemu, Ada, Laura">
         <link rel="stylesheet" href="css/contact.css">
         <script src="https://kit.fontawesome.com/d7a41c0dba.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
