--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,8 @@
             <div class="content">
                 <h2>Contact Us</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, 
-                    consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt 
-                    ut labore et dolore magna aliqua.
+                  You can contact us, if you wanna give feedback, you find errors from our website,
+                   you have any ideas to us for the future! or any other reason you want!
                 </p>
             </div>
             <div class="container">
@@ -61,7 +59,7 @@
                         <div class="icon"><i class="fa-solid fa-envelope"></i></div>
                         <div class="text">
                             <h3>Email</h3>
-                            <p>blaablaa@miumau.com</p>
+                            <p>BatterySuomi@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -87,5 +85,16 @@
                 </div>
             </div>
         </section>
+        <footer>
+
+            <address class="fontti">
+                <p>Web kehitys<br>
+                    <p>Staattisen verkkosivun luonti</p>
+                    <p>Ryhmätyö</p>
+                    <p>Teemu, Laura, Ada</p>
+                
+            </address>
+    
+        </footer>
     </body>
 </html>
