--- a/contact.html
+++ b/contact.html
@@ -67,11 +67,11 @@
                     <form>
                         <h2>Send Message</h2>
                         <div class="inputBox">
-                            <input type="text" name="" required="required">
+                            <input type="text" name="inputti" required="required">
                             <span>Full Name</span>
                         </div>
                         <div class="inputBox">
-                            <input type="text" name="" required="required">
+                            <input type="text" name="inputti" required="required">
                             <span>Email</span>
                         </div>
                         <div class="inputBox">
@@ -79,7 +79,7 @@
                             <span>Type Your Message...</span>
                         </div>
                         <div class="inputBox">
-                            <input type="submit" name="" value="Send">
+                            <input type="submit" name="inputti" value="Send">
                         </div>
                     </form>
                 </div>
