--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <h1>BATTERY</h1>
     </header>
     <div class="wrapper">
-        <div style="background-image:url(images/lopullinen\ \(1\).png)"></div>
-      <div style="background-image:url(images/lopullinen\ \(3\).png)"></div>
-      <div style="background-image:url(images/lopullinen\ \(5\).png)"></div>
+        <div style="background-image:url(/images/Nimetön\ \(6\).png)"></div>
+      <div style="background-image:url(/images/Nimetön\ \(7\).png)"></div>
+      <div style="background-image:url(/images/Nimetön\ \(8\).png)"></div>
     
     </div>
         <div class="artikkeli">
