--- a/Products/Products.html
+++ b/Products/Products.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
-    <link rel="stylesheet" href="../css/styles1.css">
+    <link rel="stylesheet" href="/css/styles1.css">
     <title>BATTERYPLUS</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
 
     </nav>
     <header>
-        <img src="/Team2_Projekti/images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
+        <img src="/images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
         <a href="../index.html"><h1>BATTERY</h1></a>
     </header>
     <div class="kuvia">
