--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Teemu, Ada, Laura">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
-    <link rel="stylesheet" href="/Team2_Projekti/css/aboutus.css">
+    <link rel="stylesheet" href="/css/aboutus.css">
     <title>ABOUT US</title>
 </head>
 <body>
