--- a/Products/Products.html
+++ b/Products/Products.html
@@ -22,7 +22,7 @@
 
     </nav>
     <header>
-        <img src="/images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
+        <img src="../images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
         <a href="../index.html"><h1>BATTERY</h1></a>
     </header>
     <div class="kuvia">
