--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Teemu, Ada, Laura">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Battery energy drink</title>
 </head>
 <body>
@@ -24,9 +24,9 @@
         <h1>BATTERY</h1>
     </header>
     <div class="wrapper">
-        <div style="background-image:url(/images/Nimetön\ \(6\).png)"></div>
-      <div style="background-image:url(/images/Nimetön\ \(7\).png)"></div>
-      <div style="background-image:url(/images/Nimetön\ \(8\).png)"></div>
+        <div style="background-image:url(images/Nimetön\ \(6\).png)"></div>
+      <div style="background-image:url(images/Nimetön\ \(7\).png)"></div>
+      <div style="background-image:url(images/Nimetön\ \(8\).png)"></div>
     
     </div>
         <div class="artikkeli">
