--- a/contact.html
+++ b/contact.html
@@ -86,15 +86,44 @@
             </div>
         </section>
         <footer>
-
-            <address class="fontti">
-                <p>Web kehitys<br>
-                    <p>Staattisen verkkosivun luonti</p>
-                    <p>Ryhmätyö</p>
-                    <p>Teemu, Laura, Ada</p>
-                
-            </address>
-    
+            <div class="footcont">
+                <div class="row">
+                    <div class="footer-col">
+                        <h4>Links</h4>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Products</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>Contacts</h4>
+                        <ul>
+                            <li>Phone, 044 123456</li>
+                            <li>BatterySuomi@gmail.com</li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>Info</h4>
+                        <ul>
+                            <li>Web kehitys</li>
+                            <li>Staattisen verkkosivun luonti</li>
+                            <li>Ryhmätyö</li>
+                            <li>Teemu, Laura, Ada</li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>Follow us</h4>
+                        <div class="social-links">
+                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
