Pienii korjauksii jee

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     </head>
 
     <body>
+        <!--Nav bar-->
         <nav>
             <ul id="fontti">
                 <li><a href="aboutus.html">ABOUT US</a></li>
@@ -20,10 +21,12 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
+        <!--Header & Logo-->
         <header>
             <img src="images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
             <a href="index.html"><h1>BATTERY</h1></a>
         </header>
+        <!--Some text & stuff-->
         <section class="contact">
             <div class="content">
                 <h2>Contact Us</h2>
@@ -63,6 +66,7 @@
                         </div>
                     </div>
                 </div>
+                <!--Contact Form w/name, email & message-->
                 <div class="contactForm">
                     <form>
                         <h2>Send Message</h2>
@@ -85,6 +89,7 @@
                 </div>
             </div>
         </section>
+        <!--Footer-->
         <footer>
             <div class="footcont">
                 <div class="row">
