Äääääää oon done

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,10 @@
     </head>
 
     <body>
-        <!--Nav bar-->
+        <!--Nav bar & Header/Logo-->
+        <header>
+            <a href="index.html"><h1><img src="images/batterylogo2.png" alt="logo" title="logo1" id="logo1"></h1></a>
+        </header>
         <nav>
             <ul id="fontti">
                 <li><a href="aboutus.html">ABOUT US</a></li>
@@ -21,11 +24,6 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
-        <!--Header & Logo-->
-        <header>
-            <img src="images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
-            <a href="index.html"><h1>BATTERY</h1></a>
-        </header>
         <!--Some text & stuff-->
         <section class="contact">
             <div class="content">
