--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <body>
         <!--Nav bar & Header/Logo-->
         <header>
-            <a href="index.html"><h1><img src="images/batterylogo2.png" alt="logo" title="logo1" id="logo1"></h1></a>
+            <a href="index.html"><h1><img src="images/batterylogo2.PNG" alt="logo" title="logo1" id="logo1"></h1></a>
         </header>
         <nav>
             <ul id="fontti">
