--- a/contact.html
+++ b/contact.html
@@ -71,10 +71,16 @@
                         <div class="inputBox">
                             <input type="text" name="inputti" required="required">
                             <span>Full Name</span>
+                        </div>
+                        <div class="inputBox">
                             <input type="text" name="inputti" required="required">
                             <span>Email</span>
+                        </div>
+                        <div class="inputBox">
                             <textarea required="required"></textarea>
                             <span>Type Your Message...</span>
+                        </div>
+                        <div class="inputBox">
                             <input type="submit" name="inputti" value="Send">
                         </div>
                     </form>
