--- a/Products/Battery-energy.html
+++ b/Products/Battery-energy.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Teemu, Ada, Laura">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
+    <script src="https://kit.fontawesome.com/d7a41c0dba.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style-products.css">
     <title>Battery Energy Drink</title>
 </head>
@@ -31,15 +32,44 @@
 </section>
 </main>
 <footer>
-
-    <address>
-        <p>Web kehitys<br>
-            <p>Staattisen verkkosivun luonti</p>
-            <p>Ryhmätyö</p>
-            <p>Teemu, Laura, Ada</p>
-        
-    </address>
-
+    <div class="footcont">
+        <div class="row">
+            <div class="footer-col">
+                <h4>Links</h4>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../aboutus.html">About Us</a></li>
+                    <li><a href="../Products/Products.html">Products</a></li>
+                    <li><a href="../contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Contacts</h4>
+                <ul>
+                    <li>Phone, 044 123456</li>
+                    <li>BatterySuomi@gmail.com</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Info</h4>
+                <ul>
+                    <li>Web kehitys</li>
+                    <li>Staattisen verkkosivun luonti</li>
+                    <li>Ryhmätyö</li>
+                    <li>Teemu, Laura, Ada</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Follow us</h4>
+                <div class="social-links">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 
     
