--- a/contact.html
+++ b/contact.html
@@ -94,10 +94,10 @@
                     <div class="footer-col">
                         <h4>Links</h4>
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Products</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="aboutus.html">About Us</a></li>
+                            <li><a href="Products/Products.html">Products</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                     <div class="footer-col">
@@ -128,5 +128,6 @@
                 </div>
             </div>
         </footer>
+        
     </body>
 </html>
