Kansio rakenne ja siihe liittyvät muutokset

--- a/Products/immunity.html
+++ b/Products/immunity.html
@@ -15,9 +15,9 @@
 <nav>
    
     <ul class="top-menu" id="fontti">
-        <li><a href="../aboutus.html">ABOUT US</a></li>
-        <li><a href="../Products/Products.html">PRODUCTS</a></li>
-        <li><a href="#">CONTACT</a></li>
+        <li><a href="../html/aboutus.html">ABOUT US</a></li>
+        <li><a href="../html/Products.html">PRODUCTS</a></li>
+        <li><a href="../html/contact.html">CONTACT</a></li>
     </ul>
 </nav>
 <header>
@@ -38,10 +38,10 @@
             <div class="footer-col">
                 <h4>Links</h4>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../aboutus.html">About Us</a></li>
-                    <li><a href="../Products/Products.html">Products</a></li>
-                    <li><a href="../contact.html">Contact Us</a></li>
+                    <li><a href="../html/index.html">Home</a></li>
+                    <li><a href="../html/aboutus.html">About Us</a></li>
+                    <li><a href="../html/Products/Products.html">Products</a></li>
+                    <li><a href="../html/contact.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="footer-col">
