--- a/html/contact.html
+++ b/html/contact.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="HTML, CSS, BATTERY, HAMK, KOULU, ENERGYDRINK">
         <meta name="description" content="Tämä sivu on tehty osana kouluprojektia">
         <meta name="author" content="Teemu, Ada, Laura">
-        <link rel="stylesheet" href="css/contact.css">
+        <link rel="stylesheet" href="../css/contact.css">
         <script src="https://kit.fontawesome.com/d7a41c0dba.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
         <title>CONTACT</title>
@@ -15,12 +15,12 @@
     <body>
         <!--Nav bar & Header/Logo-->
         <header>
-            <a href="index.html"><h1><img src="images/batterylogo2.PNG" alt="logo" title="logo1" id="logo1"></h1></a>
+            <a href="index.html"><h1><img src="../images/batterylogo2.PNG" alt="logo" title="logo1" id="logo1"></h1></a>
         </header>
         <nav>
             <ul id="fontti">
                 <li><a href="aboutus.html">ABOUT US</a></li>
-                <li><a href="Products/Products.html">PRODUCTS</a></li>
+                <li><a href="Products.html">PRODUCTS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
@@ -96,7 +96,7 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="aboutus.html">About Us</a></li>
-                            <li><a href="Products/Products.html">Products</a></li>
+                            <li><a href="Products.html">Products</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
