--- a/html/Products.html
+++ b/html/Products.html
@@ -14,16 +14,16 @@
 <body>
     <nav>
         <ul class="top-menu" id="fontti">
-            <li><a href="../aboutus.html">ABOUT US</a></li>
-            <li><a href="../Products/Products.html">PRODUCTS</a></li>
-            <li><a href="../contact.html">CONTACT</a></li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="Products.html">PRODUCTS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
             
             </ul>
 
     </nav>
     <header>
         <img src="../images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
-        <a href="../index.html"><h1>BATTERY</h1></a>
+        <a href="index.html"><h1>BATTERY</h1></a>
     </header>
     <div class="kuvia">
  
@@ -53,10 +53,10 @@
                 <div class="footer-col">
                     <h4>Links</h4>
                     <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../aboutus.html">About Us</a></li>
-                        <li><a href="../Products/Products.html">Products</a></li>
-                        <li><a href="../contact.html">Contact Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="Products.html">Products</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
