--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Teemu, Ada, Laura">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
-    <link rel="stylesheet" href="css/aboutus.css">
+    <link rel="stylesheet" href="../css/aboutus.css">
     <script src="https://kit.fontawesome.com/d7a41c0dba.js" crossorigin="anonymous"></script>
     <title>ABOUT US</title>
 </head>
@@ -15,18 +15,18 @@
     <nav>
         <ul class="top-menu" id="fontti">
             <li><a href="aboutus.html">ABOUT US</a></li>
-            <li><a href="Products/Products.html">PRODUCTS</a></li>
+            <li><a href="Products.html">PRODUCTS</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
 
     <header>
-        <img src="images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
+        <img src="../images/Batterylogo.png" alt="logo" title="logo1" id="logo1">   
         <a href="index.html"><h1>BATTERY</h1></a>
     </header>
  
 
-    <img src="images/taustaindex2.jpg" alt="team" title="team" id="team">
+    <img src="../images/taustaindex2.jpg" alt="team" title="team" id="team">
 <section class="teksti">
     
     
@@ -46,7 +46,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="aboutus.html">About Us</a></li>
-                    <li><a href="Products/Products.html">Products</a></li>
+                    <li><a href="Products.html">Products</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
