--- a/html/kirjaudu.html
+++ b/html/kirjaudu.html
@@ -2,41 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Insert title here</title>
-<link rel="stylesheet" href="css/admin.css">
+<title>Kirjaudu</title>
+<link rel="stylesheet" href="../css/admin.css">
 </head>
 <body>
 <script>
 function lahetaKayttaja(lomake){
-	var user=new Object();
-	user.tunnus=lomake.tunnus.value;
-	user.salasana=lomake.salasana.value;
-	var jsonUser=JSON.stringify(user);
-	
-	xmlhttp = new XMLHttpRequest();
-	xmlhttp.onreadystatechange = function() {
-	  if (this.readyState == 4 && this.status == 200) {
-		    if (this.responseText=="ok"){
-		    	window.location.assign("../php/tervetuloa.php");
-		    }
-		    else{
-			    document.getElementById("result").innerHTML = this.responseText;
-		    }
-	  }
-	};
-	xmlhttp.open("POST", "../php/kirjauduajax.php", true);
-	xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-	xmlhttp.send("user=" + jsonUser);	
+    var user = {
+        Tunnus: lomake.Tunnus.value,
+        Salasana: lomake.salasana.value
+    };
+    var jsonUser = JSON.stringify(user);
+    
+    var xmlhttp = new XMLHttpRequest();
+    xmlhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+            if (this.responseText == "ok") {
+                window.location.assign("../php/tervetuloa.php");
+            } else {
+                document.getElementById("result").innerHTML = this.responseText;
+            }
+        }
+    };
+    xmlhttp.open("POST", "../php/kirjaudu.php", true);
+    xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+    xmlhttp.send("user=" + jsonUser);    
 }
 </script>
 
-<form id='userlomake'>
-Käyttäjätunnus: <input type='text' name='tunnus' value='' placeholder='Käyttäjätunnus...'><br>
-salasana: <input type='text' name='salasana' value='' placeholder='Salasana...'><br>
-<input type='button' name='ok' value='Lähetä' onclick='lahetaKayttaja(this.form);'><br>
+<form id='userlomake' onsubmit='lahetaKayttaja(this); return false;'>
+KäyttäjäTunnus: <input type='text' name='Tunnus' value='' placeholder='KäyttäjäTunnus...'><br>
+salasana: <input type='password' name='salasana' value='' placeholder='Salasana...'><br> 
+<input type='submit' name='ok' value='Lähetä'><br>
 </form>
-<p id='result'>
-</p>
+<p id='result'></p>
 
 </body>
 </html>
