--- a/html/contact.html
+++ b/html/contact.html
@@ -66,7 +66,7 @@
                 </div>
                 <!--Contact Form w/name, email & message-->
                 <div class="contactForm">
-                    <form>
+                    <form id='contactlomake' method='post' action='../php/contact.php'>
                         <h2>Send Message</h2>
                         <div class="inputBox">
                             <input type="text" name="inputti" required="required">
